output/test/multi-var.err
output prefix: llvm/test/multi-var
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'QuickSort'

@a = global [0 x i32] zeroinitializer
@b = global [0 x i32] zeroinitializer
@c = global [0 x i32] zeroinitializer

define void @main() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/test/multi-var.llvm" -o "llvm/test/multi-var.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/test/multi-var.llvm:9:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/test/multi-var.llvm.bc" -o "llvm/test/multi-var.llvm.s" ... ok
linking:gcc -o "llvm/test/multi-var.llvm.exec" "llvm/test/multi-var.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/test/multi-var.llvm.exec ... ok
